--- a/application/views/users/edit.html
+++ b/application/views/users/edit.html
@@ -22,7 +22,7 @@ $if message != None:
 
     <div class="form-group">
         <label>Password</label>
-        <input required id="password" type="password" class="form-control" name="password" size="30" value="$users.password"/>
+        <input required id="contraseña" type="password" class="form-control" name="password" size="30" value="$users.password"/>
     </div>
 
     <div class="form-group">
